# yovi_en2a

./: .gitignore  README.md  docker-compose.yml  index.html  package.json  sonar-project.properties
.github/workflows/: release-deploy.yml
.postman/: resources.yaml
docs/: index.adoc
docs/src/: 01_introduction_and_goals.adoc  02_architecture_constraints.adoc  03_context_and_scope.adoc  05_building_block_view.adoc  06_runtime_view.adoc  07_deployment_view.adoc  08_concepts.adoc  09_architecture_decisions.adoc  10_quality_requirements.adoc  11_technical_risks.adoc  12_api_documentation.adoc  12_glossary.adoc  12_test_report.adoc  13_api_documentation.adoc
gameManager/: Dockerfile
gameManager/src/: data.rs  firebase.rs  lib.rs
game_manager/: Cargo.toml  Dockerfile
game_manager/src/: api_rest.rs  data.rs  firebase.rs  redis_client.rs
game_manager/tests/: api_rest_engine_mock_tests.rs  api_rest_mock_tests.rs  api_rest_test.rs  db_tests.rs  ranking_integration_tests.rs  redis_test.rs
gamey/: Cargo.toml
gamey/src/: cli.rs  gamey_error.rs  lib.rs
gamey/src/bot/: greedy.rs  (+2 more)
gamey/tests/: firebase_users.rs  play_test.rs
userAuthentification/: Cargo.toml  Dockerfile
userAuthentification/src/: api_rest.rs  firebase.rs  lib.rs  main.rs  user_data.rs
userAuthentification/tests/: db_tests.rs
users/: openapi.yaml  package-lock.json  package.json  users-service.js
webapp/: Dockerfile  nginx.conf  nginx.local.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
webapp/src/: App.css  App.tsx  AuthForm.tsx  LoginForm.tsx  MainMenu.tsx  MenuButtons.tsx
(+139 files in other folders)
